# toolhub

./: .gitignore  .python-version  LICENSE  README.md  dev_requirements.txt  mypy.ini  pyproject.toml  requirements.txt
toolhub/: config.py
toolhub/demo/: alpaca.yaml  call_tools.py  domain_generator.py  openai_assistant.py  openai_chat.py  recommendation_bot.py  salesbot.py  stockbot.py  utils.py
toolhub/integrations/openapi/: client.py  function.py  parser.py  provider.py
toolhub/integrations/openapi/apis/alpaca/: alpaca.py
toolhub/integrations/openapi/apis/crunchbase/: crunchbase.py  crunchbase_v4.json  crunchbase_v4.request_body_descriptions.json
toolhub/integrations/rapidapi/: execute.py  function.py  get_collection_name.py  loader.py  provider.py  sendgrid.json  utils.py
toolhub/integrations/rapidapi/private/: ast-grep.yaml  extract_funcs.sh  generate_functions_json.py  json_parser.py
toolhub/lib/: auth.py  function.py  hub.py  provider.py  registry.py  utils.py
toolhub/openai/: assistant_utils.py  openai_assistant_hub.py  openai_chat_hub.py  utils.py
toolhub/standard_providers/: random_provider.py
toolhub/standard_providers/tests/: test_provider.py
